<resources>
    <string name="app_name">Floating Labels</string>

    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up" translatable="false">Se Connecter</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="hint_noms">Nom </string>
    <string name="connection">CONNEXION</string>
    <string name="hint_register">INSCRIPTION</string>
    <string name="nick_name">Prenom</string>
    <string name="name_account">MON COMPTE</string>
</resources>
